# prom_products_mgr

./: .dockerignore  README.MD  docker-compose.prod.yml  docker-compose.yml  load_env.bat  manage.py  offer_ids.txt  pyproject.toml  pytest.ini  requirements.txt  scheduler.py
compose/django/: Dockerfile
compose/local/django/: Dockerfile  entrypoint.sh
compose/prod/django/: Dockerfile  (+1 more)
static/project/: sticky_toolbar.css
supplies/: abstract.py  admin.py  dto.py  factories.py  models.py  services.py  tasks.py  views.py
supplies/adapters/: features_extractors.py  rewriters.py  translators.py
supplies/integrations/: bukvarix.py  deepl_batch.py  seo_ai.py
supplies/migrations/: 0001_initial.py  0002_alter_suppliercategory_parent_category.py  0003_alter_sitecategory_parent_category.py  0004_alter_suppliercategory_parent_category_and_more.py  0005_remove_supplieroffer_categoryid_offer_category_and_more.py  0006_alter_supplieroffer_category.py  0007_alter_offer_active.py  0008_alter_offer_category_alter_offer_description_and_more.py  0009_alter_sitecategory_parent_category_and_more.py  0010_alter_supplieroffer_article_and_more.py  0011_alter_supplieroffer_group_id.py  0012_offer_price_multiplier.py  0013_offer_suggested_price.py
supplies/services/: content.py  feed.py  images.py
supplies/static/: scroll_preserve.js  zoom.css
supplies/tests/: factories.py
templates/product_infographics/: red_title_yellow_arrows.html
trade_harbor/: asgi.py  celery.py  env.py  production_settings.py  settings.py  urls.py  wsgi.py
trade_harbor/middlewares/: sql_printing.py
(+16 files in other folders)
