[tool.poetry]
name = "trade-harbor"
version = "0.1.0"
description = "TradeHarbor is a comprehensive management panel designed to handle offers/products from multiple dropshipping suppliers. It allows you to create unique content (product titles, product descriptions) using ChatGPT, manage product groups, and handle keyword management. With the potential to evolve into a fully functional CRM system, TradeHarbor is built using Django, Celery, and lxml."
authors = ["krch-sudo <krv93200@proton.me>"]
license = "MIT"
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
et-xmlfile = "1.1.0"
idna = "3.6"
lxml = "5.0.0"
numpy = "1.26.2"
openpyxl = "3.1.2"
pandas = "2.1.4"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
requests = "2.31.0"
schedule = "1.2.1"
six = "1.16.0"
soupsieve = "2.5"
tzdata = "2023.3"
urllib3 = "2.1.0"
django = "^5.0.1"
django-admin-rangefilter = "^0.12.0"
django-treebeard = "^4.7"
openai = "^1.10.0"
langid = "^1.1.6"
deepl-cli = "^0.6.0"
celery = {extras = ["redis"], version = "^5.3.6"}
playwright-recaptcha = "^0.4.2"
playwright-stealth = "^1.0.6"
django-tags-input = "^6.0.0"
django-admin-interface = "^0.28.5"


[tool.poetry.group.dev.dependencies]
eventlet = "^0.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
